@@ -84,9 +84,14 @@ $schema->class('Track')->load_components('PK::Auto::Oracle');
 
 # test primary key handling with multiple triggers
 my $new = $schema->resultset('Artist')->create({ name => 'foo' });
-is($new->artistid, 1, "Oracle Auto-PK worked");
+is($new->artistid, 1, "Oracle Auto-PK worked for sqlt-like trigger");
 
-like ($new->result_source->column_info('artistid')->{sequence}, qr/\.artist_pk_seq$/, 'Correct PK sequence selected');
+like ($new->result_source->column_info('artistid')->{sequence}, qr/\.artist_pk_seq$/, 'Correct PK sequence selected for sqlt-like trigger');
+
+$new = $schema->resultset('CD')->create({ artist => 1, title => 'foo', year => '2003' });
+is($new->cdid, 1, "Oracle Auto-PK worked for custom trigger");
+
+like ($new->result_source->column_info('cdid')->{sequence}, qr/\.cd_seq$/, 'Correct PK sequence selected for custom trigger');
 
 # test again with fully-qualified table name
 my $artistfqn_rs = $schema->resultset('ArtistFQN');
@@ -120,7 +125,7 @@ is( $it->next->name, "Artist 6", "iterator->next ok" );
 is( $it->next, undef, "next past end of resultset ok" );
 
 my $cd = $schema->resultset('CD')->create({ artist => 1, title => 'EP C', year => '2003' });
-is($cd->cdid, 1, "Oracle Auto-PK worked - using scalar ref as table name");
+is($cd->cdid, 2, "Oracle Auto-PK worked - using scalar ref as table name");
 
 # test rel names over the 30 char limit
 {
@@ -131,7 +136,7 @@ is($cd->cdid, 1, "Oracle Auto-PK worked - using scalar ref as table name");
   });
 
   lives_and {
-    is $query->first->cds_very_very_very_long_relationship_name->first->cdid, 1
+    is $query->first->cds_very_very_very_long_relationship_name->first->cdid, 2
   } 'query with rel name over 30 chars survived and worked';
 
   # rel name over 30 char limit with user condition
@@ -831,11 +836,18 @@ sub do_creates {
     CREATE OR REPLACE TRIGGER cd_insert_trg
     BEFORE INSERT OR UPDATE ON cd
     FOR EACH ROW
+    DECLARE
+    tmpVar NUMBER;
+
     BEGIN
+      tmpVar := 0;
+
       IF :new.cdid IS NULL THEN
         SELECT cd_seq.nextval
-        INTO :new.cdid
-        FROM DUAL;
+        INTO tmpVar
+        FROM dual;
+
+        :new.cdid := tmpVar;
       END IF;
     END;
   });
